PermSize,MaxPermSize support was removed in Java 8